<resources>
    <string name="app_name">Training App</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popup">PopUp</string>
    <string name="drawer">Drawer</string>
    <string name="mainTitle">BJIT Training Projects</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="dart">Dart</string>
    <string name="c">C++</string>
    <string name="html">HTML</string>
    <string name="choose">Choose a language</string>
    <string name="destroy">Destroy Activity</string>
    <string name="custom_item_1">Custom Fragment 1</string>
    <string name="custom_item_2">Custom Fragment 2</string>
    <string name="custom_item_3">Custom Fragment 3</string>
    <string name="activity_1">Activity 1</string>
    <string name="go_to_activity_2">Go To Activity 2</string>
    <string name="go_to_activity_1">Go To Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="go_to_activity_3">Go To Activity 3</string>
    <string name="activity_3">Activity 3</string>
    <string name="back_to_activity_2">Back To Activity 2</string>
    <string name="logout">Logout</string>
    <string name="label_frag3">Fragment 3</string>
    <string name="label_frag2">Fragment 2</string>
    <string name="label_frag1">Fragment 1</string>
    <string name="exitTag">Do you want to exit the Drawer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="images">Images</string>
    <string name="custom_button">Custom Button</string>
    <string name="tab_view">Tab-view</string>
    <string name="tabs_title_frag1">Frag 1</string>
    <string name="tabs_title_frag2">Frag 2</string>
    <string name="tabs_title_frag3">Frag 3</string>
    <string name="tabs_title_frag4">Frag 4</string>
    <string name="tabs_title_frag5">Frag 5</string>
    <string name="string">String</string>
    <string name="integer">Integer</string>
    <string name="bool">Boolean</string>
    <string name="label_frag4">Fragment 4</string>
    <string name="label_frag5">Fragment 5</string>
    <string name="character">Char</string>
    <string name="doub">Double</string>
    <string name="talk_to_frags">Talk to fragments</string>
    <string name="trans">Transition</string>
    <string name="sadman_details">Software Engineer - BJIT Limited\n+8801994660589\nUttara, Dhaka.</string>
    <string name="asef_details">Software Engineer - BJIT Limited\n+8801769696969\nToo tired, To search.</string>
    <string name="eftekhar_details">Software Engineer - BJIT Limited\n+8801714206900\nSomewhere, Bangladesh.</string>
    <string name="sadman_name">Sadman Alam</string>
    <string name="asef_name">Asef Hossain</string>
    <string name="eftekhar_name">Eftekharul Islam</string>
</resources>