<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Custom Fragments">
        <menu>
            <item
                android:id="@+id/customfrag1"
                android:icon="@android:drawable/ic_media_play"
                android:title="@string/custom_item_1" />
            <item
                android:id="@+id/customfrag2"
                android:icon="@android:drawable/ic_media_play"
                android:title="@string/custom_item_2" />
            <item
                android:id="@+id/customfrag3"
                android:icon="@android:drawable/ic_media_play"
                android:title="@string/custom_item_3" />
        </menu>
    </item>
</menu>