<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.redenvy.drawertestapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.redenvy.drawertestapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.redenvy.drawertestapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/customfrag1"
        android:name="com.redenvy.drawertestapp.ui.customfrag1.customfrag1"
        android:label="@string/label_frag1"
        tools:layout="@layout/customfrag1_fragment" />
    <fragment
        android:id="@+id/customfrag2"
        android:name="com.redenvy.drawertestapp.ui.customfrag2.customfrag2"
        android:label="@string/label_frag2"
        tools:layout="@layout/customfrag2_fragment" />
    <fragment
        android:id="@+id/customfrag3"
        android:name="com.redenvy.drawertestapp.ui.customfrag3.customfrag3"
        android:label="@string/label_frag3"
        tools:layout="@layout/customfrag3_fragment" />
</navigation>