<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMarginButton"
        android:fontFamily="@font/cabin"
        android:text="@string/mainTitle"
        android:textSize="@dimen/titleSize" />

    <Button
        android:id="@+id/popup"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMarginButton"
        android:text="@string/popup" />

    <Button
        android:id="@+id/drawer"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMarginButton"
        android:text="@string/drawer" />

    <Button
        android:id="@+id/img"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMarginButton"
        android:text="@string/images" />

    <Button
        android:id="@+id/tabs"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMarginButton"
        android:text="@string/tab_view" />

    <Button
        android:id="@+id/trans"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/topMarginButton"
        android:text="@string/trans" />

</androidx.appcompat.widget.LinearLayoutCompat>